# haskell-and-cpp

./: .gitignore  README.md  Setup.hs  haskell-and-cpp.cabal
ext_lib/: Makefile  capi.cpp  capi.h  lib.cpp  lib.h
src/: Sample.hs
test/: Main.hs
