name:                haskell-and-cpp
version:             0.1
license:             MIT
license-file:        LICENSE
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:   Sample
  build-depends:     base >= 4.7 && < 5
  hs-source-dirs:    src
  default-language:  Haskell2010

test-suite test
  hs-source-dirs:    test
  main-is:           Main.hs
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  build-depends:
      base  >= 4.7 && < 5
    , hspec >= 2.1.5
    , haskell-and-cpp
