name:                haskell-and-cpp
version:             0.1
license:             MIT
license-file:        LICENSE
build-type:          Custom
cabal-version:       >=1.10

extra-source-files:
  ext_lib/*.cpp
  ext_lib/*.c
  ext_lib/Makefile

library
  exposed-modules:   Sample
  build-depends:     base >= 4.7 && < 5
  hs-source-dirs:    src
  default-language:  Haskell2010
  extra-libraries:   ext, stdc++

test-suite test
  hs-source-dirs:    test
  main-is:           Main.hs
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  build-depends:
      base  >= 4.7 && < 5
    , hspec >= 2.1.5
    , haskell-and-cpp
